<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addCustomerParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.AddCustomerActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameAddCustomerTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/name_add_customer"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeErrorColor="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressAddCustomerTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/address_add_customer"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeErrorColor="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameAddCustomerTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/GSTNoAddCustomerTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/gst_no_add_customer"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeErrorColor="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressAddCustomerTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/deliveryAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/delivery_address_text_view"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/GSTNoAddCustomerTextField" />

        <TableLayout
            android:id="@+id/addCustomerTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/black"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryAddressTextView">

            <TableRow
                android:layout_margin="1dp"
                android:background="@android:color/black">

                <TextView
                    android:layout_marginEnd="1dp"
                    android:background="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/s_no"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:background="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/address"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/deliveryAddressAddCustomerTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/delivery_address_add_customer"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeErrorColor="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addCustomerTableLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addDeliveryAddressButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_button"
            android:onClick="addDeliveryAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryAddressAddCustomerTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>