<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/qualityActivityParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.QualitiesActivity">

        <TableLayout
            android:id="@+id/qualityListTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_margin="1dp"
                android:background="@android:color/black">

                <TextView
                    android:layout_marginEnd="1dp"
                    android:background="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/s_no"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:background="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/quality_heading"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityListTableLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addQualityTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/add_quality_edit_text"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeErrorColor="?attr/colorError">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/qualityAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="addQualityButtonOnClick"
                android:text="@string/add" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>